--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         border: 1px solid black;
       }
       
+      svg {
+        border: 1px dashed red
+      }
+      
     </style>
   </head>
   <body>
