Sample file edits

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <h3>Arrow Test</h3>
       <div>
-        x: <input type="range" min="0" max="100" id="x">
+        Animation slider! <input type="range" min="0" max="100" id="x">
       </div>
       <div class="test-1">
         <h2 class="callout1">Some awesome callout</h2>
